--- a/BrotBoxEngine/BrotBoxEngine.vcxproj
+++ b/BrotBoxEngine/BrotBoxEngine.vcxproj
@@ -262,14 +262,18 @@
     <ClInclude Include="BBE\Vector4.h" />
     <ClInclude Include="BBE\VWTransform.h" />
     <ClInclude Include="BBE\VertexWithNormal.h" />
+    <ClInclude Include="BBE\Terrain.h" />
+    <ClInclude Include="BBE\ValueNoise2D.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Terrain.cpp" />
     <ClCompile Include="CameraControlNoClip.cpp" />
     <ClCompile Include="Cube.cpp" />
     <ClCompile Include="EngineSettings.cpp" />
     <ClCompile Include="Matrix4.cpp" />
     <ClCompile Include="Mouse.cpp" />
     <ClCompile Include="PrimitiveBrush3D.cpp" />
+    <ClCompile Include="ValueNoise2D.cpp" />
     <ClCompile Include="Vector3.cpp" />
     <ClCompile Include="Vector4.cpp" />
     <ClCompile Include="VertexWithNormal.cpp" />
