--- a/BrotBoxEngine/BrotBoxEngine.vcxproj
+++ b/BrotBoxEngine/BrotBoxEngine.vcxproj
@@ -232,6 +232,7 @@
     <ClInclude Include="BBE\EngineSettings.h" />
     <ClInclude Include="BBE\PointLight.h" />
     <ClInclude Include="BBE\LightFalloffMode.h" />
+    <ClInclude Include="BBE\IcoSphere.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="BBE\STLAllocator.h" />
     <ClInclude Include="BBE\STLCapsule.h" />
@@ -268,6 +269,7 @@
     <ClInclude Include="BBE\ValueNoise2D.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="IcoSphere.cpp" />
     <ClCompile Include="PointLight.cpp" />
     <ClCompile Include="Terrain.cpp" />
     <ClCompile Include="CameraControlNoClip.cpp" />
