--- a/BrotBoxEngine/BrotBoxEngine.vcxproj
+++ b/BrotBoxEngine/BrotBoxEngine.vcxproj
@@ -335,6 +335,8 @@
     <None Include="Shader2DPrimitive.vert" />
     <None Include="Shader3DPrimitive.frag" />
     <None Include="Shader3DPrimitive.vert" />
+    <None Include="Shader3DTerrain.frag" />
+    <None Include="Shader3DTerrain.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
