--- a/BrotBoxEngineTest/BrotBoxEngineTest.vcxproj.filters
+++ b/BrotBoxEngineTest/BrotBoxEngineTest.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClInclude Include="ImageTest.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="Vector3Test.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
