--- a/BrotBoxEngine/BrotBoxEngine.vcxproj.filters
+++ b/BrotBoxEngine/BrotBoxEngine.vcxproj.filters
@@ -345,6 +345,9 @@
     <ClInclude Include="BBE\ViewFrustum.h">
       <Filter>Header Files\GFX\Vulkan\Wrappers</Filter>
     </ClInclude>
+    <ClInclude Include="BBE\TerrainSingle.h">
+      <Filter>Header Files\Shapes</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -510,6 +513,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ViewFrustum.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TerrainSingle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
